Try to not use podman - some tar and pipe problems
Problem happens after all tests pass:

Run command with stdout: podman exec --user pytest -i ansible-test-controller-hLEbtZTx sh -c 'tar cf - -C /root/ansible_collections/scale_computing/hypercore/tests --exclude .tmp output | gzip'
Run command with stdin: tar oxzf - -C /home/runner/work/HyperCoreAnsibleCollection/HyperCoreAnsibleCollection/ansible_collections/scale_computing/hypercore/tests
WARNING: Command "tar oxzf - -C /home/runner/work/HyperCoreAnsibleCollection/HyperCoreAnsibleCollection/ansible_collections/scale_computing/hypercore/tests" returned exit status 2.
>>> Standard Error
gzip: stdin: unexpected end of file
tar: Unexpected EOF in archive

Maybe this will help.
See also https://github.com/containers/podman/issues/5046

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -8,7 +8,7 @@ on:
 env:
   NAMESPACE: scale_computing
   COLLECTION_NAME: hypercore
-  ANSIBLE_TEST_PREFER_PODMAN: 1
+  # ANSIBLE_TEST_PREFER_PODMAN: 1
 jobs:
   job1:
     outputs:
