--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -95,8 +95,10 @@ jobs:
       - run: cd $WORKDIR && ls -al tests/integration/integration_config.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_vm.yml
       - run: cd $WORKDIR && ansible-playbook tests/integration/prepare/prepare_iso.yml
+#      - id: set-matrix
+#        run: echo "matrix=$(ls -r $WORKDIR/tests/integration/targets | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
       - id: set-matrix
-        run: echo "matrix=$(ls -r $WORKDIR/tests/integration/targets | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
+        run: echo "matrix=$(ls -r $WORKDIR/tests/integration/targets | grep time | jq -R -s -c 'split("\n")[:-1]')" >> $GITHUB_OUTPUT
 
   integration-test:
     needs:
