Add mypy to CI file

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -8,41 +8,29 @@ concurrency:
   group: ${{ github.ref_name }}
   cancel-in-progress: true
 jobs:
-  docs:
+  mypy:
+    name: Type checks (mypy)
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
     steps:
-      - name: Checkout
+      - name: Check out code
         uses: actions/checkout@v3
-      - run: pip3 install -r sanity.requirements -r test.requirements -r docs.requirements
-      - run: apt update
-      - run: apt install -y git make
-        # ansible-test needs special directory structure.
-      - run: mkdir -p $WORKDIR
-      - run: cp -a ./  $WORKDIR
-        #
-      - run: cd $WORKDIR && make docs
-      - run: cd $WORKDIR && ls -al docs/build/html
 
-  sanity-test:
-    runs-on: [self-hosted]
-    container: python:3.10-slim-buster
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - run: pip3 install -r sanity.requirements -r test.requirements -r docs.requirements
-      - run: apt update
-      - run: apt install -y git make
-      - run: pip install ansible-core==2.13.1
-        # ansible-test needs special directory structure.
-      - run: mkdir -p $WORKDIR
-      - run: cp -a ./  $WORKDIR
-        # Same as "make sanity"
-        # TODO reuse Makefile
-      - run: cd $WORKDIR && black -t py38 --check --diff --color plugins tests/unit
-      - run: cd $WORKDIR && ansible-lint
-      - run: cd $WORKDIR && flake8 --exclude tests/output/
-      - run: cd $WORKDIR && ansible-test sanity
+      - name: Install requirements
+        shell: bash
+        run: |
+          apt update
+          pip install --upgrade pip wheel
+          pip install mypy==0.991
+
+      - name: Link repo into the correct structure and run mypy
+        shell: bash
+        run: |
+          set -eux
+          mkdir -p $WORKDIR
+          cp -a ./  $WORKDIR
+          cd $WORKDIR
+          mypy -p plugins
 
   units-test:
     runs-on: [self-hosted]
