--- a/examples/time_server.yml
+++ b/examples/time_server.yml
@@ -1,8 +1,4 @@
 ---
 - name: Modify current NTP Time Server entries (in HyperCore API settings)
   scale_computing.hypercore.time_server:
-    source: pool.ntp.org
-
-- name: Modify current Time Server entries (in HyperCore API settings)
-  scale_computing.hypercore.time_zone:
-    zone: US/Eastern # must be set if not already present in existing entries
+    source: pool.ntp.org # must be set if not already present in existing entries
