Start integration tests only if unit tests pass
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -101,6 +101,7 @@ jobs:
   integration-test:
     needs:
       - integration-prepare-env
+      - units-test
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
     env:
