Put version-matrix for units tests into separate file
We do not want to let ansible-test ver 2.14 to test with python 2.7.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -23,18 +23,27 @@ jobs:
           target-python-version: 3.11
           testing-type: sanity
 
+  get_matrix:
+    outputs:
+      version_matrix: ${{ steps.set-matrix.outputs.version_matrix }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3
+      - run: python -c "import json, yaml; print('version_matrix=' + json.dumps(yaml.safe_load(open('.github/workflows/files/ansible-test-units-matrix.yml'))))"
+      - id: set-matrix
+        name: set version_matrix output
+        # run: echo "::set-output name=matrix::{\"node\":[10, 12, 14]}"
+        run: python -c "import json, yaml; print('version_matrix=' + json.dumps(yaml.safe_load(open('.github/workflows/files/ansible-test-units-matrix.yml'))))"  >> $GITHUB_OUTPUT
+      - run: cat $GITHUB_OUTPUT
+
   units:
-    name: units ${{ matrix.ansible }}
+    needs: get_matrix
+    name: units ${{ matrix.ansible }}-py${{ matrix.python }}
     strategy:
       fail-fast: false
       matrix:
-        ansible:
-          - stable-2.9
-          - stable-2.10
-          - stable-2.11
-          - stable-2.12
-          - stable-2.13
-          - stable-2.14
+        include: ${{ fromJSON(needs.get_matrix.outputs.version_matrix) }}
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -43,5 +52,5 @@ jobs:
         uses: ansible-community/ansible-test-gh-action@release/v1
         with:
           ansible-core-version: ${{ matrix.ansible }}
-          # target-python-version: ${{ matrix.python }}
+          target-python-version: ${{ matrix.python }}
           testing-type: units
