--- a/tests/integration/targets/time_server/tasks/main.yml
+++ b/tests/integration/targets/time_server/tasks/main.yml
@@ -5,6 +5,13 @@
     SC_PASSWORD: "{{ sc_password }}"
 
   block:
+    - name: TEMP revert to default
+      scale_computing.hypercore.api:
+        action: post
+        endpoint: /rest/v1/TimeSource/timesource_guid
+        data:
+          host: "pool.ntp.org"
+
     - name: Get default configs
       scale_computing.hypercore.api:
         action: get
@@ -67,7 +74,7 @@
           - info.record.uuid == actual_uuid
 
     # ------------------------------------------------
-
+  always:
     - name: Restore back to default
       scale_computing.hypercore.api:
         action: post
